Spacing issue resolved #4263

--- a/src/components/date_picker/super_date_picker/_super_date_picker.scss
+++ b/src/components/date_picker/super_date_picker/_super_date_picker.scss
@@ -11,7 +11,7 @@
 
 .euiSuperDatePicker__flexWrapper--noUpdateButton {
   width: $euiSuperDatePickerWidth;
-  max-width: 100%
+  
 }
 
 .euiSuperDatePicker {
